--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:aqua;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+button {
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  color: #fff;
+  background-color: #23a030;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 5px;
+        }
+button:hover {
+   background-color: #f60c0c;
+   box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+   transition: background-color 0.3s ease-in;
 }
